--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-psycopg2-binary==2.7.7
+psycopg2-binary==2.8.6
 dj-database-url==0.5.0
 Django==3.0.3
 whitenoise==5.2.0
-pytz==2020.1
+pytz==2021.1
 gunicorn==20.0.4
+postgresql==12.2
 django-crispy-forms==1.11.1
 django-shopping-cart==0.1
-pillow==8.1.0
+pillow==8.1.2
