--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "c:\\Users\\amany\\Anaconda3\\python.exe"
+    "python.pythonPath": "C:\\Users\\amany\\Anaconda3\\python.exe"
 }
